2006-04-02  David Reveman  <davidr@novell.com>

	* plugins/water.c: Add scale and bias to normal so that light can be
	computed correclty. Offset texture coordinates for nice refraction
	effect. (P-a Bäckström)
	(waterDrawWindowTexture): Add scaling after setting up texture
	coordinate generation.
	Fix up loading of bump map programs.
	(softwareUpdate): Improve performance of software fall-back code a bit.
	(waterDrawWindowTexture): Always use filter for when window is
	transformed.

	* plugins/gconf.c (gconfGetValue): Fix typo that caused color
	parsing to be incomplete (Quinn Storm).

2006-04-01  David Reveman  <davidr@novell.com>

	* plugins/switcher.c: Add "initiate all" binding which brings up the
	switcher window with all mapped windows and "initiate" binding will
	now bring up the switcher window with only the visible windows.

2006-03-31  David Reveman  <davidr@novell.com>

	* plugins/minimize.c (minDamageWindowRect): Never leave windows
	in scaled state.

	* src/screen.c (moveScreenViewport): Move hidden windows as well.

	* src/window.c (addWindow, activateWindow, hideWindow)
	(showWindow):
	* src/screen.c (enterShowDesktopMode, leaveShowDesktopMode):
	* src/event.c (handleEvent):
	* include/compiz.h: Fix up show desktop mode.

	* plugins/water.c (fboVertices): return 1.

2006-03-30  David Reveman  <davidr@novell.com>

	* src/texture.c (enableTexture): Always make sure mipmaps are up to
	date when using GL_LINEAR_MIPMAP_LINEAR filter.

2006-03-29  David Reveman  <davidr@novell.com>

	* gnome/window-decorator/gnome-window-decorator.c: Draw outline around
	window title text and buttons instead of small shadow.

	* src/event.c (handleEvent):
	* include/compiz.h:
	* src/window.c: Set allowed window actions more correctly.

	* plugins/move.c: Add opacity option.

	* plugins/Makefile.am: Add water plugin. It's not very useful yet
	and it needs more work but it's a good example of how to use
	GL_ARB_fragment_program and GL_EXT_framebuffer_object for visual